sigma.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html i {
  font-size: 3em;
}
body.no-scroll {
  overflow: hidden;
}
body {
  background-color: #000000;
  height: 100vh;
  /* width: 100vw; */
}

/* ---- header: search bar ---- */
header {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1rem;
  background-color: #1b7ad8;
  position: relative;
  top: 0;
  left: 0;
  right: 0;
  height: 4rem;
  z-index: 1000;
}
header input[type="text"] {
  margin-right: 1rem;
}
header i {
  cursor: pointer;
}
#search-bar:focus {
  /* background-color: yellow; */
  opacity: 1;
}
#search-bar {
  width: 20%;
  opacity: 0.5;
  border: none;
  outline: none;
  font-size: 1.5rem;
}

/* --- main: the grid --- */
main {
  padding: 1rem;
  margin-top: 4rem; /* to avoid overlap with header */
  background-color: #000000;
  height: 100vh;
}
/*inventory display*/
.inventory-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  gap: 20px;
  padding: 20px 0;
}
/*for the context menu positioning*/
.inventory-item {
  text-align: center;
  transition: transform 0.2s ease-in-out;
  position: relative; /*for the context menu positioning*/
  cursor: pointer;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  color: wheat;
  z-index: 1;
  font-size: 2.1em;
}
.inventory-item img {
  user-select: none;
}
.inventory-item:hover {
  transform: translateY(-5px);
}

/* --- nav: home, add, delete menu --- */
nav {
  height: 4rem;
  display: flex;
  position: fixed;
  bottom: 0;
  width: 100%;
  justify-content: space-around;
  padding: 1rem;
  background-color: #777e85a6;
  z-index: 999;
}
nav a {
  text-decoration: none;
  color: #007bff;
  padding: 5px;
}

/* --- Context Menu Styling --- */
.context-menu {
  position: absolute;
  background-color: white;
  border: 1px solid #ccc;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  padding: 5px 0;
  z-index: 1000; /* Ensure that it is on the top of th eother elements */
  min-width: 150px;
}
.context-menu button {
  display: block;
  width: 100%;
  padding: 10px 15px;
  border: none;
  background: none;
  text-align: left;
  cursor: pointer;
  font-size: 0.95em;
  color: #333;
}
.context-menu button:hover {
  background-color: #f0f0f0;
}

/* --- modal --- */
#modal-overlay {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
  z-index: 1001;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.6);
}
#addmenu {
  background-color: white;
}

/*media queries*/
/*laptop*/
@media (max-width: 1366px) {
  html {
    font-size: 75%;
  }
}
/*tablet*/
@media (max-width: 1024px) {
  html {
    font-size: 60%;
  }

  /*mobile*/
}
/* mobile */
@media (max-width: 768px) {
  html {
    font-size: 55%;
  }
  .context-menu {
    transform: scale(2);
    transform-origin: top left;
  }
  #search-bar {
    width: 25%;
  }
}

